<resources>


    <string name="app_name">Pay Rocket</string>
    <string name="btn_text">Login</string>
    <string name="reg">Register</string>
    <string name="head">Pay Rocket</string>
    <string name="userN">Username</string>
    <string name="userP">Password</string>
    <string name="tagline">Payment Become Faster</string>
    <string name="forget">Forgot Username/ Password</string>


    <!--  FORGOT PAge-->

    <string name="Fhead">Login Help</string>
    <string name="userid">admin</string>
    <string name="userpass">admin</string>


    <!-- HOme -->
    <string name="title_activity_home">Home</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Suyash Vashishtha</string>
    <string name="nav_header_subtitle">suyashvashishtha@gmail.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Home</string>
    <string name="menu_profile">Profile</string>
    <string name="menu_setiings">Setting</string>
    <string name="menu_about">About</string>

    <!-- Custom tags-->

    <string name="Homehead">Pay Counter</string>
    <string name="pay_btn">Pay</string>
    <string name="rec_btn">Fees</string>
    <string name="pass_btn">Passbook</string>


    <!-- home middle-->

    <string name="home_middle">Latest</string>
    <string name="balance">Balance</string>
    <string name="Payment">Payment</string>
    <string name="Recveived">Received</string>
    <string name="bal_amount">1000/-</string>
    <string name="pay_amount">-450</string>
    <string name="rec_amount">+379</string>

    <!-- Home Bottom-->

    <string name="movie">Book Movies</string>
    <string name="moviedesc">Movie Logo</string>
    <string name="book_travel">Travel</string>
    <string name="traveldesc">Travel Logo</string>
    <string name="book_food">Order Food</string>
    <string name="fooddesc">Food Logo</string>
    <string name="pay_bills">Pay Bills</string>
    <string name="billdesc">Pay Logo</string>
    <string name="bottom_home">Online Pay</string>


    <!-- PROFILE-->

    <string name="profileHead">Profile</string>
    <string name="Pusername">Suyash Vashishtha</string>
    <string name="Pnum">6378138062</string>
    <string name="Pdob">03- March- 2003</string>
    <string name="Pemail">suyashvashishtha@gmail.com</string>
    <string name="userDesc">Dp</string>


    <!--About-->
    <string name="imgDesc">Logo</string>

    <string name="madeby">Made by- Suyash Vashishtha</string>

    <!-- Paying-->
    <string name="pHead">Payments</string>
    <string name="payName">Receiver Name</string>
    <string name="payNum">Receiver Number</string>

    <string name="amtText">Amount</string>
    <string name="amount">Enter Amount</string>

    <string name="amtMsg">Message</string>
    <string name="Msg">Enter Message</string>

    <string name="balText">Rocket Balance</string>
    <string name="bal">Rs. 999999999</string>

    <string name="payBtn">Pay</string>

    <string name="bottomtag">Pay with Rocket Safety</string>

    <!-- Pay Done-->
    <string name="PayHead">Payment Satus</string>
    <string name="PsubHead">Success</string>

    <string name="amountpaid">Rs. 000</string>
    <string name="sentTo">Sent To</string>
    <string name="recuser">Receiver Number</string>


    <string name="thanks">Thanks for Using  Pay Rocket</string>


    <!-- Balance -->

    <string name="addM">+ Add Money</string>

    <string name="balHead">Rocket Balance</string>
    <string name="balTitle">Account</string>
    <string name="trans">Transactions</string>

    <string name="tr1">Hemant </string>
    <string name="am1">Rs. +9999</string>


    <string name="tr2">Elon Musk</string>
    <string name="am2">Rs. +9999</string>

    <string name="tr3">Praveen Boii</string>
    <string name="am3">Rs. -9999</string>

    <string name="tr4">Mukesh Ambani</string>
    <string name="am4">Rs. -9999</string>

    <string name="tr5">Jeff Bezos</string>
    <string name="am5">Rs. +9999</string>

    <string name="tr6">Krish Panwar</string>
    <string name="am6">Rs.  -9999</string>

    <string name="tr7">Bill Gates</string>
    <string name="am7">Rs. +9999</string>

    <string name="CurDesc">This is money logo</string>




    <string name="feehead">Fee Payment</string>
    <string name="schoolname">School Name</string>
    <string name="schoolnum">School Number</string>
    <string name="studentName">Student Name</string>


</resources>